// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processForm should return error when credit card validation fails 1`] = `
Object {
  "error": true,
  "fieldErrors": Object {
    "creditCardErrors": "mockedCreditCardErrors",
  },
}
`;

exports[`processForm should return viewData 1`] = `
Object {
  "error": false,
  "viewData": Object {
    "paymentInformation": Object {
      "adyenIssuerName": "mocked_issuer_name",
      "adyenPaymentMethod": "mockedPaymentMethod",
      "cardNumber": "mockedCardNumber",
      "cardType": "mockedCardType",
      "isCreditCard": true,
      "stateData": "mockedStateData",
    },
    "paymentMethod": Object {
      "htmlName": "mockedPaymentMethod",
      "value": "mockedPaymentMethod",
    },
    "saveCard": true,
  },
}
`;

exports[`processForm should return viewData when authenticated and registered 1`] = `
Object {
  "error": false,
  "viewData": Object {
    "paymentInformation": Object {
      "adyenIssuerName": "mocked_issuer_name",
      "adyenPaymentMethod": "mockedPaymentMethod",
      "cardNumber": "mocked_cc_number",
      "cardType": "mocked_cc_type",
      "creditCardToken": "mocked_raw_cc_token ",
      "expirationMonth": "mocked_cc_exp_month",
      "expirationYear": "mocked_cc_exp_year",
      "isCreditCard": false,
      "securityCode": "mocked_security_code",
      "stateData": "{\\"paymentMethod\\":{\\"storedPaymentMethodId\\":\\"mocked_id\\"}}",
    },
    "paymentMethod": Object {
      "htmlName": "mockedPaymentMethod",
      "value": "mockedPaymentMethod",
    },
    "saveCard": true,
  },
}
`;
